applications/mindspore-doc-search/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: mindspore-doc-search
  name: mindspore-doc-search
