applications/mindspore-doc-search/doc-search-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: doc-search-service
  namespace: mindspore-doc-search
spec:
  ports:
  - name: http-port
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: doc-search
  type: ClusterIP
