applications/mindspore-doc-search/doc-search-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: doc-search-ingress
  namespace: mindspore-doc-search
spec:
  rules:
  - host: doc-search.mindspore.cn
    http:
      paths:
      - backend:
          serviceName: doc-search-service
          servicePort: 80
        path: /
  tls:
  - hosts:
    - doc-search.mindspore.cn
    secretName: doc-search-tls
